<resources>
    <string name="app_name"> آموزش رزین اپوکسی </string>
    <string name="app_pdf"> دانلود آموزش بصورت PDF</string>
    <string name="Season1">فصل اول : آشنایی با مقدمات کار اپوکسی رزین</string>
    <string name="Season2">فصل دوم : ابزارآلات مورد نیاز</string>
    <string name="Season3">فصل سوم : نحوه محاسبه میزان رزین</string>
    <string name="Season4">فصل چهارم : انواع چوب درختان</string>
    <string name="Season5">فصل پنجم : زیورآلات برنز و برنج</string>
    <string name="Season6">فصل ششم : میزچوبی</string>
    <string name="Season7">فصل هفتم : کف پوش رزین اپوکشی</string>
    <string name="Season8">فصل هشتم : ابزارآلات مورد نیاز</string>
    <string name="Season9">فصل نهم : ابزارآلات مورد نیاز</string>
    <string name="Season10">فصل دهم : ابزارآلات مورد نیاز</string>
    //سرفصل های فصل اول//
    <string name="Season1_1">آشنایی با مواد و ابزار مورد نیاز</string>
    <string name="Season1_2">آشنایی با رزین</string>
    //فصل اول//
    <string name="Season1_1_1"> رزین چیست ؟ </string>
    <string name="Season1_1_2"> انواع رزین </string>
    <string name="Season1_1_3"> خشک کردن انواع رزین </string>
    <string name="Season1_1_4"> در شناسایی و خرید رزین حرفه ای شوید </string>
    <string name="Season1_1_5"> نقش روان کننده در رزین اپوکسی </string>
    <string name="Season1_1_6"> حلال ها و رقیق کننده ها در رزین اپوکسی </string>
    <string name="Season1_1_7"> ویژگی های دیگر رزین ها </string>
    <string name="Season1_1_8"> ویژگی های ظرف ترکیب رزین و هاردنر </string>
    <string name="Season1_1_9"> ترکیب کردن رزین و هاردنر - تئوری و عملی</string>
    <string name="Season1_1_10"> همزن باید چه ویژگی هایی داشته باشد ؟ </string>
    <string name="Season1_1_11"> نکات نهایی بسیار مهم در مورد رزین </string>


    //فصل دوم//
    <string name="Season2_1_1"> گام به گام ساخت میز چوبی با رزین 1</string>
    <string name="Season2_1_2"> گام به گام ساخت میز چوبی با رزین 2</string>
    <string name="Season2_1_3"> گام به گام ساخت میز چوبی با رزین 3</string>
    <string name="Season2_1_4"> گام به گام ساخت میز چوبی با رزین 4</string>
    <string name="Season2_1_5"> گام به گام ساخت میز چوبی با رزین 5</string>
    <string name="Season2_1_6"> گام به گام ساخت میز چوبی با رزین 6</string>
    <string name="Season2_1_7">راه اندازی کارگاه کار با اپوکسی</string>
    <string name="Season2_1_8">گرم کردن کارگاه کار با اپوکسی</string>
    <string name="Season2_1_9">انتخاب قالب برای میز اپوکسی 1</string>
    <string name="Season2_1_10">انتخاب قالب برای میز اپوکسی 2</string>
    <string name="Season2_1_11">انتخاب قالب برای میز اپوکسی 3</string>
    <string name="Season2_1_12">انتخاب قالب برای میز اپوکسی 4</string>
    <string name="Season2_1_13">انتخاب قالب برای میز اپوکسی 5</string>
    <string name="Season2_1_14"></string>
    <string name="Season2_1_15"></string>



    //فصل سوم//
    <string name="Season3_1_1">آموزش کلیات ساخت آباژور</string>
    <string name="Season3_1_2">ساخت پروژه کامل 1 مدت زمان 15 دقیقه</string>
    <string name="Season3_1_3">ساخت پروژه کامل 2 مدت زمان 12 دقیقه</string>
    <string name="Season3_1_4">ساخت پروژه کامل 3 مدت زمان 13 دقیقه</string>
    <string name="Season3_1_5">ساخت پروژه کامل 4 مدت زمان 10 دقیقه</string>
    <string name="Season3_1_6">ساخت پروژه کامل 5 مدت زمان 10 دقیقه</string>
    <string name="Season3_1_7">ساخت پروژه کامل 6 مدت زمان 10 دقیقه</string>
    <string name="Season3_1_8">ساخت پروژه کامل 7 مدت زمان 13 دقیقه</string>


    //فصل پنجم//
    <string name="Season5_1_1">آموزش نقاشی آبستره  1</string>
    <string name="Season5_1_2">آموزش نقاشی آبستره  2</string>
    <string name="Season5_1_3">نمونه نقاشی آبستره  1</string>
    <string name="Season5_1_4">نمونه نقاشی آبستره  2</string>
    <string name="Season5_1_5">نمونه نقاشی آبستره  3</string>
    <string name="Season5_1_6">نمونه نقاشی آبستره  4</string>


    <string name="Season1_3">آموزش کار بار رزین</string>
    <string name="Season1_4">فصل سوم</string>
    <string name="Season1_5">فصل چهارم</string>
    <string name="Season1_6">فصل پنجم</string>
    <string name="Season1_7">فصل ششم</string>
    <string name="Season1_8">فصل هفتم</string>
    <string name="Season1_9">فصل هشتم</string>
    <string name="Season1_10">فصل نهم</string>
    //سرفصل های فصل دوم//
    <string name="Season2_1">اول : چگونه حلقه طلایی اپوکسی رزین ایجاد کنیم</string>
    <string name="Season2_2">دوم : آموزش ساخت گوشواره چوب و رزین</string>
    <string name="Season2_3">سوم : فیلم اموزش ساختن حلقه رزین و چوب</string>
    <string name="Season2_4">چهارم : آموزش درست کردن انگشتر و زیورآلات رزین اپوکسی</string>
    <string name="Season2_5">پنجم : زیورآلات برنز و برنج</string>
    <string name="Season2_6">ششم : میزچوبی</string>
    <string name="Season2_7">هفتم : کف پوش رزین اپوکشی</string>
    <string name="Season2_8">هشتم : ابزارآلات مورد نیاز</string>
    <string name="Season2_9">نهم : ابزارآلات مورد نیاز</string>
    <string name="Season2_10">دهم : ابزارآلات مورد نیاز</string>
    //سرفصل های فصل سوم//
    <string name="Season3_1">اول : چگونه حلقه طلایی اپوکسی رزین ایجاد کنیم</string>
    <string name="Season3_2">دوم : آموزش ساخت گوشواره چوب و رزین</string>
    <string name="Season3_3">سوم : فیلم اموزش ساختن حلقه رزین و چوب</string>
    <string name="Season3_4">چهارم : آموزش درست کردن انگشتر و زیورآلات رزین اپوکسی</string>
    <string name="Season3_5">پنجم : زیورآلات برنز و برنج</string>
    <string name="Season3_6">ششم : میزچوبی</string>
    <string name="Season3_7">هفتم : کف پوش رزین اپوکشی</string>
    <string name="Season3_8">هشتم : ابزارآلات مورد نیاز</string>
    <string name="Season3_9">نهم : ابزارآلات مورد نیاز</string>
    <string name="Season3_10">دهم : ابزارآلات مورد نیاز</string>
    //سرفصل های فصل چهارم//
    <string name="Season4_1">اول : چگونه حلقه طلایی اپوکسی رزین ایجاد کنیم</string>
    <string name="Season4_2">دوم : آموزش ساخت گوشواره چوب و رزین</string>
    <string name="Season4_3">سوم : فیلم اموزش ساختن حلقه رزین و چوب</string>
    <string name="Season4_4">چهارم : آموزش درست کردن انگشتر و زیورآلات رزین اپوکسی</string>
    <string name="Season4_5">پنجم : زیورآلات برنز و برنج</string>
    <string name="Season4_6">ششم : میزچوبی</string>
    <string name="Season4_7">هفتم : کف پوش رزین اپوکشی</string>
    <string name="Season4_8">هشتم : ابزارآلات مورد نیاز</string>
    <string name="Season4_9">نهم : ابزارآلات مورد نیاز</string>
    <string name="Season4_10">دهم : ابزارآلات مورد نیاز</string>
    //سرفصل های فصل پنجم//
    <string name="Season5_1">اول : چگونه حلقه طلایی اپوکسی رزین ایجاد کنیم</string>
    <string name="Season5_2">دوم : آموزش ساخت گوشواره چوب و رزین</string>
    <string name="Season5_3">سوم : فیلم اموزش ساختن حلقه رزین و چوب</string>
    <string name="Season5_4">چهارم : آموزش درست کردن انگشتر و زیورآلات رزین اپوکسی</string>
    <string name="Season5_5">پنجم : زیورآلات برنز و برنج</string>
    <string name="Season5_6">ششم : میزچوبی</string>
    <string name="Season5_7">هفتم : کف پوش رزین اپوکشی</string>
    <string name="Season5_8">هشتم : ابزارآلات مورد نیاز</string>
    <string name="Season5_9">نهم : ابزارآلات مورد نیاز</string>
    <string name="Season5_10">دهم : ابزارآلات مورد نیاز</string>
    //سرفصل های فصل ششم//
    <string name="Season6_1">اول : چگونه حلقه طلایی اپوکسی رزین ایجاد کنیم</string>
    <string name="Season6_2">دوم : آموزش ساخت گوشواره چوب و رزین</string>
    <string name="Season6_3">سوم : فیلم اموزش ساختن حلقه رزین و چوب</string>
    <string name="Season6_4">چهارم : آموزش درست کردن انگشتر و زیورآلات رزین اپوکسی</string>
    <string name="Season6_5">پنجم : زیورآلات برنز و برنج</string>
    <string name="Season6_6">ششم : میزچوبی</string>
    <string name="Season6_7">هفتم : کف پوش رزین اپوکشی</string>
    <string name="Season6_8">هشتم : ابزارآلات مورد نیاز</string>
    <string name="Season6_9">نهم : ابزارآلات مورد نیاز</string>
    <string name="Season6_10">به جلسه اول خوش اومدید.  در این جلسه قصد دارم اول مواد  و ابزاری رو که برای ساخت زیورالات رزینی احتیاج دارید رو معرفی کنم و به صورت مفصل در مورد کاربرد هر یک از مواد و ابزار براتون توضیح بدم.  البته در هر جلسه مجددا به تفکیک براتون مواد و ابزار مربوط به همون جلسه رو یاد آوری می کنم. </string>
</resources>
