<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/Main_Seasons_Color_ground"
    android:orientation="vertical"
    tools:context=".season2"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    android:backgroundTint="@color/Text_Color_ground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Button_Color_ground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/btns1n1"
                style="@style/ButtonStyleList"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/button_3_table"
                android:text="@string/Season2_1_1"
                android:textColor="@color/TextColor"
                android:fontFamily="@font/sans_num_bold"
                />

            <Button
                android:id="@+id/btns1n2"
                style="@style/ButtonStyleList"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/button_3_table"
                android:text="@string/Season2_1_2"
                android:textColor="@color/TextColor"
                android:fontFamily="@font/sans_num_bold"
                />

            <Button
                android:id="@+id/btns1n3"
                style="@style/ButtonStyleList"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/button_3_table"
                android:text="@string/Season2_1_3"
                android:textColor="@color/TextColor"
                tools:layout_editor_absoluteX="34dp"
                tools:layout_editor_absoluteY="250dp"
                android:fontFamily="@font/sans_num_bold"
                />

            <Button
                android:id="@+id/btns1n4"
                style="@style/ButtonStyleList"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/button_3_table"
                android:text="@string/Season2_1_4"
                android:textColor="@color/TextColor"
                android:fontFamily="@font/sans_num_bold"
                />

            <Button
                android:id="@+id/btns1n5"
                style="@style/ButtonStyleList"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/button_3_table"
                android:text="@string/Season2_1_5"
                android:fontFamily="@font/sans_num_bold"
                />

            <Button
                android:id="@+id/btns1n6"
                style="@style/ButtonStyleList"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/button_3_table"
                android:text="@string/Season2_1_6"
                android:fontFamily="@font/sans_num_bold"
                />

            <Button
                android:id="@+id/btns1n7"
                style="@style/ButtonStyleList"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/button_3_table"
                android:text="@string/Season2_1_7"
                android:fontFamily="@font/sans_num_bold"
                />

            <Button
                android:id="@+id/btns1n8"
                style="@style/ButtonStyleList"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/button_3_table"
                android:text="@string/Season2_1_8"
                android:fontFamily="@font/sans_num_bold"
                />

            <Button
                android:id="@+id/btns1n9"
                style="@style/ButtonStyleList"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/button_3_table"
                android:text="@string/Season2_1_9"
                android:fontFamily="@font/sans_num_bold"
                />

            <Button
                android:id="@+id/btns1n10"
                style="@style/ButtonStyleList"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/button_3_table"
                android:text="@string/Season2_1_10"
                android:fontFamily="@font/sans_num_bold"
                />

            <Button
                android:id="@+id/btns1n11"
                style="@style/ButtonStyleList"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/button_3_table"
                android:text="@string/Season2_1_11"
                android:fontFamily="@font/sans_num_bold"
                />

            <Button
                android:id="@+id/btns1n12"
                style="@style/ButtonStyleList"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/button_3_table"
                android:text="@string/Season2_1_12"
                android:fontFamily="@font/sans_num_bold"
                />


        </LinearLayout>


    </ScrollView>

</LinearLayout>