<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="#D3D7FA"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".s1n1p1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView"
                style="@style/TextStyleWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Season6_10" />

            <Button
                android:id="@+id/btns1n1p1"
                style="@style/ButtonStyleList"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/button_1_learning"
                android:text="@string/Season1_1_1"
                android:textColor="@color/TextColor" />

            <Button
                android:id="@+id/btns1n1p2"
                style="@style/ButtonStyleList"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/button_1_learning"
                android:text="@string/Season1_1_2"
                android:textColor="@color/TextColor" />

            <Button
                android:id="@+id/btns1n1p3"
                style="@style/ButtonStyleList"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/button_1_learning"
                android:text="@string/Season1_1_3"
                android:textColor="@color/TextColor" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>