<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="#D3D7FA"
    android:backgroundTint="@color/Button_Color_ground"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".s1n1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/btns1n1p1"
                style="@style/ButtonStyleList"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/button_1_learning"
                android:text="@string/Season1_1"
                android:textColor="@color/TextColor" />

            <Button
                android:id="@+id/btns1p2"
                style="@style/ButtonStyleList"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/button_1_learning"
                android:text="@string/Season1_2"
                android:textColor="@color/TextColor" />

            <Button
                android:id="@+id/btns1p3"
                style="@style/ButtonStyleList"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/button_1_learning"
                android:text="@string/Season1_3"
                android:textColor="@color/TextColor" />

            <Button
                android:id="@+id/btns1p4"
                style="@style/ButtonStyleList"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/button_1_learning"
                android:text="@string/Season1_4"
                android:textColor="@color/TextColor"
                tools:layout_editor_absoluteX="34dp"
                tools:layout_editor_absoluteY="250dp" />


        </LinearLayout>


    </ScrollView>

</LinearLayout>